fix(Table): fix table align padding

--- a/themes/components/table.less
+++ b/themes/components/table.less
@@ -22,6 +22,7 @@
     vertical-align: middle;
     &.text-right {
       padding-right: 8px;
+      padding-left: 0;
     }
   }
   th&-th-checkbox, td&-td-checkbox{
